loop fixes, achievement fixes

--- a/admin/templates/dashboard.html
+++ b/admin/templates/dashboard.html
@@ -151,7 +151,7 @@
 
         <div class="create-table-form">
             <h3>Table Management</h3>
-            <input type="text" id="new-table-name" placeholder="Bot Table: Random" value="{{ state.config.table_name }}">
+            <input type="text" id="new-table-name" placeholder="Bot Table" value="{{ state.config.table_name }}">
             <select id="deck-select">
                 <option value="Hunt Down And Destroy The Jedi">Hunt Down (Dark)</option>
                 <option value="Your Insight Serves You Well">Insight (Light)</option>
